syntax="proto3";

package checkout;

import "payment.proto";

option go_package="/checkout";

service CheckoutService{
    rpc Checkout(CheckoutReq) returns (CheckoutResp){};
}

message CheckoutReq{
    uint32 user_id=1;
    string firstname=2;
    string lastname=3;
    string email=4;
    Address address=5;
    payment.CreditCardInfo credit_card=6;
}

message Address {
    string street_address=1;
    string city=2;
    string state=3; //省份
    string country=4;
    string zip_code=5; // 邮政编码
}

message CheckoutResp{
    string order_id=1; // 订单号
    string transaction_id=2; //交易号
}
