syntax="proto3";

package payment;

option go_package="/payment";

service PaymentService{
    rpc Charge(ChargeReq) returns (ChargeResp) {};
}

message CreditCardInfo{
    string credit_card_number=1;
    int32 credit_card_cvv=2;
    int32 credit_card_expiration_year=3;
    int32 credit_card_expiration_month=4;
}

message ChargeReq{
    float amount=1; // 需要支付的总额
    CreditCardInfo credit_card=2;
    string order_id=3; // 订单id
    uint32 user_id=4;
}

message ChargeResp{
    string transaction_id=1; //返回校验id
}